Fixing horizontal scroll on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -93,7 +93,7 @@ figure img {
   align-items: flex-start;
   flex-direction: column;
   justify-content: flex-start;
-  height: 100vh;
+  height: 100%;
   margin: auto;
   max-width: 700px;
   padding: 50px 20px 20px;
